--- a/typo3/sysext/t3skin/rtehtmlarea/htmlarea.css
+++ b/typo3/sysext/t3skin/rtehtmlarea/htmlarea.css
@@ -52,13 +52,15 @@
 }
 .htmlarea .toolbar .x-form-item {
 	float: left;
-	margin:0;
+	height: 26px;
+	margin: 0 2px;
 }
 .htmlarea .toolbar .x-form-item-label {
-	vertical-align:middle;
 	background-color:transparent;
 	border-style:none;
-	margin:0;padding:3px 3px 0px 3px;
+	margin:0;
+	padding:2px 3px 0px 3px;
+	min-width: 110px;
 }
 /* Fix combo box left loat in IE6 */
 body.ext-ie6 .htmlarea .toolbar .x-form-item {
@@ -71,7 +73,8 @@ body.ext-ie6 .htmlarea .toolbar .x-form-item {
 	border-width: 1px;
 	border-color: transparent;
 	border-collapse: separate;
-	margin: 0 0 4px 0;
+	height: 23px;
+	margin: 0 0 3px 0;
 	padding: 0;
 	float: left;
 }
@@ -133,13 +136,12 @@ body.ext-ie6 .htmlarea-context-menu .buttonActive,
 .htmlarea .toolbar .indicator {
 	cursor: default;
 	background-color: white;
-	width: 20px;
-	height: 16px;
+	width: 24px;
+	height: 18px;
 	overflow: hidden;
 	text-align: center;
 	border: 1px solid ButtonShadow;
-	margin: 3px 1px 5px 1px;
-	padding: 0 3px;
+	margin: 2px 1px 4px 1px;
 	float: left;
 }
 .htmlarea .toolbar .buttonDisabled {
@@ -148,26 +150,23 @@ body.ext-ie6 .htmlarea-context-menu .buttonActive,
 	-moz-opacity: 0.25;
 }
 .htmlarea .toolbar .separator {
-	background-color: transparent;
-	background-image: url("images/separator.gif");
-	background-repeat: no-repeat;
-	background-position: 0 -1px;
-	width: 7px;
-	height: 23px;
-	border: 1px solid #EFEFF4;
-	margin-bottom: 1px;
+	background-color: rgb(115, 115, 115);
 	float: left;
+	height: 18px;
+	margin: 3px 2px 5px 2px;
+	padding: 0;
+	width: 1px;
 }
 .htmlarea .toolbar .space {
 	background-color:transparent;
-	height:22px;
+	height: 26px;
 	border-style:none;
 	margin:0;padding:0 1px;
 	float:left;
 }
 .htmlarea .toolbar .select {
 	color: WindowText;
-	margin: 0 0 4px 0;
+	height: 18px;
 }
 .htmlarea .toolbar .x-form-item label.x-form-item-label{
 	padding-right: 0;
